--- a/index.html
+++ b/index.html
@@ -24,5 +24,29 @@ Ruby のドキュメントを整備しちゃうぞプロジェクト、仮サイト
 <li><a href="faq/">よくある質問 (Ruby FAQ)</a></li>
 </ul>
 
+<ul>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/library/">ライブラリインデックス</a></li>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/library/_builtin">_builtin ライブラリのページ</a></li>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/class/">クラスインデックス</a></li>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/class/Object">Object クラスのページ</a></li>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/class/String">String クラスのページ</a></li>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/method/String/s/new">String.new のページ</a></li>
+<li><a href="http://doc.loveruby.net/refm/api/view.cgi/method/String/i/pack">String#pack のページ</a></li>
+</ul>
+
+<h2>めも</h2>
+<ul>
+<li>ライブラリのページは view.cgi/library/NAME</li>
+<li>クラスのページは view.cgi/class/NAME</li>
+<li>メソッドのページは view.cgi/CLASSNAME/TYPECHAR/METHODNAME
+  <ul>
+  <li>CLASSNAME の「::」は「__」にする</li>
+  <li>TYPECHAR: s = singleton method, i = instance method, c = constant, v = special variable</li>
+  <li>METHODNAME は URL エンコード</li>
+  </ul>
+</li>
+<li>実はクラスリファレンス以外のドキュメントをどうするか全然考えていない</li>
+</ul>
+
 </body>
 </html>
