--- a/index.html
+++ b/index.html
@@ -12,40 +12,22 @@
 <p>
 Ruby のドキュメントを整備しちゃうぞプロジェクト、仮サイト
 </p>
+
 <ul>
   <li>
-    <a href="refm/">リファレンスマニュアル</a>
+    <a href="refm/">リファレンスマニュアル (not ready)</a>
     <ul>
-      <li><a href="refm/spec/">Ruby 言語仕様</a></li>
-      <li><a href="refm/api/">クラスリファレンス</a></li>
-      <li><a href="refm/capi/">拡張ライブラリ API リファレンス</a></li>
+      <li><a href="refm/spec/">Ruby 言語仕様</a> (not ready)</li>
+      <li><a href="refm/api/">クラスリファレンス</a> (alpha)</li>
+      <li><a href="refm/capi/">拡張ライブラリ API リファレンス</a> (not ready)</li>
     </ul>
   </li>
-<li><a href="faq/">よくある質問 (Ruby FAQ)</a></li>
+<li><a href="faq/">よくある質問 (Ruby FAQ)</a> (not ready)</li>
 </ul>
 
+<h2>Memo</h2>
 <ul>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/library/">ライブラリインデックス</a></li>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/library/_builtin">_builtin ライブラリのページ</a></li>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/class/">クラスインデックス</a></li>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/class/Object">Object クラスのページ</a></li>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/class/String">String クラスのページ</a></li>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/method/String/s/new">String.new のページ</a></li>
-<li><a href="http://doc.loveruby.net/refm/api/view.cgi/method/String/i/pack">String#pack のページ</a></li>
-</ul>
-
-<h2>めも</h2>
-<ul>
-<li>ライブラリのページは view.cgi/library/NAME</li>
-<li>クラスのページは view.cgi/class/NAME</li>
-<li>メソッドのページは view.cgi/CLASSNAME/TYPECHAR/METHODNAME
-  <ul>
-  <li>CLASSNAME の「::」は「__」にする</li>
-  <li>TYPECHAR: s = singleton method, i = instance method, c = constant, v = special variable</li>
-  <li>METHODNAME は URL エンコード</li>
-  </ul>
-</li>
-<li>実はクラスリファレンス以外のドキュメントをどうするか全然考えていない</li>
+<li>2006-09-18: Class reference manual alpha1.</li>
 </ul>
 
 </body>
