add link to project Wiki
git-svn-id: http://jp.rubyist.net/svn/rurema/doctree/trunk@506 018432c1-2f1c-0410-ba7c-d424024924b7

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@ Ruby のドキュメントを整備しちゃうぞプロジェクト、仮サイト
 <li><a href="faq/">よくある質問 (Ruby FAQ)</a> (not ready)</li>
 </ul>
 
-<h2>Memo</h2>
+<h2>About Project</h2>
+<ul>
+<li><a href="wiki/">Wiki</a></li>
+</ul>
+
+<h2>Change Log</h2>
 <ul>
 <li>2006-09-18: Class reference manual alpha1.</li>
 </ul>
