--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
   <meta http-equiv="Content-Type" content="text/html; charset=iso-2022-jp">
   <meta http-equiv="Content-Language" content="ja-JP">
   <link rel="stylesheet" type="text/css" href="/document.css">
-<title>doc.loveruby.net</title>
+<title>Rubyリファレンスマニュアル刷新計画</title>
 </head>
 <body>
 
-<h1>doc.loveruby.net</h1>
-<p>
-Ruby のドキュメントを整備しちゃうぞプロジェクト、仮サイト
-</p>
-
+<h1>Rubyリファレンスマニュアル刷新計画</h1>
 <ul>
   <li>
     <a href="refm/">リファレンスマニュアル (not ready)</a>
     <ul>
       <li><a href="refm/spec/">Ruby 言語仕様</a> (not ready)</li>
-      <li><a href="refm/api/">クラスリファレンス</a> (alpha)</li>
+      <li><a href="refm/api/">クラスリファレンス</a> (alpha1)</li>
       <li><a href="refm/capi/">拡張ライブラリ API リファレンス</a> (not ready)</li>
     </ul>
   </li>
@@ -32,7 +28,8 @@ Ruby のドキュメントを整備しちゃうぞプロジェクト、仮サイト
 
 <h2>Change Log</h2>
 <ul>
-<li>2006-09-18: Class reference manual alpha1.</li>
+<li>2006-10-15: プロジェクトメンバー用 Wiki を設置</li>
+<li>2006-09-18: クラスリファレンスα1 を公開</li>
 </ul>
 
 </body>
